--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ My only happiness and torture in my home is my sister's son Kavin.
 He is the little prince of our family. My whole family is living for that prince only. 
 His face always brings happiness to us.
 </p>
-<img src="my happiness.jpg" height="300px" width="300px" alt="My Photo">
+<img src="my happiness.jpg" height="300px" width="300px" alt="my happiness">
 
 <h3>Studies</h3>
 <p>
@@ -36,7 +36,7 @@ I like to listen to music. Music is my therapist.
 Recently, I watched Harry Potter movies. It's my all-time favorite. 
 I never get bored of watching this series.
 </p>
-<img src="Harry Potter.jpg" height="250px" width="300px" alt="Hobbies">
+<img src="Harry Potter.jpg" height="250px" width="300px" alt="Harry Potter">
 
 <br><br>
 <input type="button" value="Like it" onclick="alert('Thanks for liking my bio! 😊')">
